add moving picture

--- a/contact-us.html
+++ b/contact-us.html
@@ -35,18 +35,20 @@
             </ul>
         </nav>
         <div class="flex-container">
+
+
             <div class="info ">
                 <div class="whatWhereWhyConference2">
                     <div class="imgLounge">
-                        <img id="lounge" src="images/cross-culture_image.png"
-                            alt="World Map with cartoon figures saying hello in their own language" class="img-fluid">
+                        <img src="images/quotation-mark.png"
+                            alt="Quotation Mark" class="img-fluid" style="width: 64px;">
                     </div>
                 </div>
                 <div class="about_contact">
                     <p class="quote_home"><q><em>A language is not just words. It's a culture, a tradition, a
                                 unification of a community, a whole history that creates what a community is. It's all
                                 embodied in a language.</em></q>
-                        - Noam Chomsky
+                        <br><br>- Noam Chomsky
                     </p>
                     <p class="need_padding_1em">Have questions about the ISUD? Want to learn more about universal
                         dialogue and cross
@@ -58,23 +60,33 @@
                 <form method="get" action="#null" name="mailingListForm" autocomplete="on"
                     onsubmit="return checkForm()">
                     <div id="container">
-                        <label for="firstname">First Name</label>
-                        <input type="text" name="first_name" id="firstname" class="fontsize" placeholder="First Name"
+                        <h4>Join Our Mailing List</h4>
+                        <label for="firstname">First Name *</label>
+                        <input type="text" name="first_name" id="firstname" class="fontsize" placeholder="You First Name"
                             autocomplete="given-name">
-                        <label for="lastname">Last Name</label>
-                        <input type="text" name="last_name" id="lastname" class="fontsize" placeholder="Last Name"
+                        <label for="lastname">Last Name *</label>
+                        <input type="text" name="last_name" id="lastname" class="fontsize" placeholder="Your Last Name"
                             autocomplete="family-name">
-                        <label for="email">Email</label>
-                        <input type="email" name="email_data" id="email" class="fontsize" placeholder="Email"
+                        <label for="email">Email *</label>
+                        <input type="email" name="email_data" id="email" class="fontsize" placeholder="Your Email"
                             autocomplete="email">
                         <div id="submit">
-                            <input type="submit" value="Join the Mailing List!" class="fontsize">
+                            <input type="submit" value="Join Now!" class="fontsize">
                         </div>
                     </div>
                 </form>
             </div>
+
+
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_yyjaansa.json"  background="transparent"  speed="1"  style="width: 100%; height: auto;"  loop  autoplay></lottie-player>
+
+
         </div>
     </div>
+
+
+
     <div class="clearer"></div>
 </body>
 
